cmake_minimum_required(VERSION 2.8)
project(TuneIt C)
set(TuneIt_MAJOR_VERSION 0)
set(TuneIt_MINOR_VERSION 3)
set(TuneIt_VERSION ${TuneIt_MAJOR_VERSION}.${TuneIt_MINOR_VERSION})
include(FindPkgConfig)
pkg_search_module(ALSA REQUIRED alsa)
pkg_search_module(FFTW REQUIRED fftw3f)
pkg_search_module(JACK REQUIRED jack)
include_directories(${ALSA_INCLUDE_DIRS})
include_directories(${FFTW_INCLUDE_DIRS})
include_directories(${JACK_INCLUDE_DIRS})
configure_file("${PROJECT_SOURCE_DIR}/config.h.in" "${PROJECT_BINARY_DIR}/config.h")
include_directories("${PROJECT_BINARY_DIR}")
add_executable(tuneit tuneit.c)
target_link_libraries(tuneit m ${ALSA_LIBRARIES} ${FFTW_LIBRARIES}
                             ${JACK_LIBRARIES})
install(TARGETS tuneit DESTINATION bin)
install(FILES tuneit.1 DESTINATION share/man/man1)
